--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/index.html
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" href="./src/assets/favicon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SCE - Sistema de Cadastro de Estagiarios</title>
   </head>
